--- a/src/Styles/contactModule.scss
+++ b/src/Styles/contactModule.scss
@@ -1,5 +1,7 @@
 .contactContainer {
     height: 100vh;
+    animation: pulse; 
+    animation-duration: 2s;
 }
 .contact {
     display: flex; 
@@ -12,6 +14,8 @@
     display: flex;
     width:40vw;
     margin-bottom: 1%;
+    animation: zoomIn; 
+    animation-duration: 2s;
 }
 
 .nameEmail input {
@@ -24,6 +28,8 @@
 
 .subject {
     width: 40vw;
+    animation: zoomIn; 
+    animation-duration: 2s;
 }
 
 .subject input {
@@ -39,14 +45,18 @@ textarea {
     height: 20vh;
     border: .5px solid rgb(196, 196, 196); 
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    animation: zoomIn; 
+    animation-duration: 2s;
 }
 
 .submitButton {
     margin-left: auto;
     margin-right: auto;
+    animation: zoomIn; 
+    animation-duration: 2s;
 }
 
-.submitButton button {
+.submitButton {
     margin-top: 1%;
     height: 4vh;
     width: 10vw;
@@ -54,6 +64,13 @@ textarea {
     border: .5px solid rgb(196, 196, 196); 
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     margin-left: 35%;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+  
+.submitButton:hover {
+    background-color: #555555;
+    color: white;
 }
 
 .contactTitle {
@@ -63,3 +80,8 @@ textarea {
     letter-spacing: 3px;
     font-family: 'Lato', sans-serif;
 }
+
+
+
+
+
