--- a/src/Styles/projectModule.css
+++ b/src/Styles/projectModule.css
@@ -45,6 +45,12 @@
     font-family: 'Lato', sans-serif;
 }
 
-.slide-container {
+.projectPage {
+    animation: zoomIn; 
+    animation-duration: 2s;
+}
 
+.projectInfo {
+    animation: zoomIn; 
+    animation-duration: 2s;
 }
