--- a/src/Styles/homeModule.css
+++ b/src/Styles/homeModule.css
@@ -1,80 +1,88 @@
-
-
 .homeContainer {
-   display: flex; 
-   flex-direction: column;
-   width: 100vw;
-   height: 100vh;
-   justify-content: space-around;
-   align-items: center;
-   font-family: 'Poppins', sans-serif;
-   letter-spacing: 3px;
-   background-color: var(--background);
-   color: var(--font-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.introduction {
-    margin-top: 5%;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: absolute;
-    margin-top: -10%;
+.introContainer {
+  display: flex;
+  flex-direction: column;
+  font-family: "Inter", sans-serif;
+  margin-top: 5%;
+  width: 200%;
+  align-items: center;
+  font-family: "Inter", sans-serif;
+  letter-spacing: 3px;
+  background-color: var(--background);
+  color: var(--font-color);
+  font-size: 1.5rem;
+  width: 50%;
+  padding: 5%;
+  /* border-radius: 3%;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
+    rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
+    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+  animation: backInDown;
+  animation-duration: 2s; */
 }
 
-.introduction p {
-    font-size: 1.5em;
-    margin: 0;
-    font-family: 'Lato', sans-serif;
-    font-weight: bold;
-    letter-spacing: 2px;
+.intro {
+  color: rgb(24, 65, 112);
 }
 
-.introduction h1 {
-    font-size: 3.5em;
-    margin: 1% 0 0 0;
+.introContainer p {
+  font-size: 0.75em;
+  margin-top: 5%;
+  font-family: "Inter", sans-serif;
+  letter-spacing: 2px;
 }
 
-.introduction h2 {
-    font-size: 2.5em;
-    margin: 0;
+.introContainer h1 {
+  font-size: 2em;
+  margin: 1% 0 0 0;
+}
+
+.introContainer h2 {
+  font-size: 2em;
+  margin: 0;
 }
 
 #bio {
-    margin-top: 5%;
-    font-size: 2em;
-    text-align: center;
+  margin-top: 5%;
+  font-size: 2em;
+  text-align: center;
 }
 
 .links {
-    display: flex; 
-    width: 30%;
-    justify-content: space-evenly;
+  display: flex;
+  width: 30%;
+  justify-content: space-evenly;
 }
 
 .top {
-    animation: backInDown; 
-    animation-duration: 2s;
+  margin-bottom: 5%;
 }
 
 .left {
-    animation: backInLeft; 
-    animation-duration: 2s;
+  margin-bottom: 5%;
 }
 
 .right {
-    animation: backInRight; 
-    animation-duration: 2s;
+  margin-bottom: 5%;
 }
 
 .bottom {
-    animation: backInUp; 
-    animation-duration: 2s;
 }
 
+.links {
+  width: 100%;
+  margin-top: 10%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1%;
+}
 
-
-
-
+.icon-github {
+  width: 40px;
+}
