--- a/src/Styles/navBar.css
+++ b/src/Styles/navBar.css
@@ -1,84 +1,98 @@
 .navBar {
-    display: flex; 
-    background-color: var(--background);
-    z-index: 2;
-    width: 100%;
-    height: 5vh;
-    border-bottom: .5px solid --border-color;
-    position: fixed;
-    font-family: 'Lato', sans-serif;
-    align-items: center;
-    padding: 1%;
-    justify-content: center;
+  display: flex;
+  flex-direction: row;
+  background-color: var(--background);
+  z-index: 2;
+  width: 100%;
+  height: 5vh;
+  border-bottom: 0.5px solid --border-color;
+  position: fixed;
+  font-family: "Inter", sans-serif;
+  align-items: center;
+  padding: 1%;
+  justify-content: center;
+  font-size: 1.1em;
+  color: rgb(24, 65, 112);
+}
+
+.navBarContainer {
+  display: flex;
+  flex-direction: row;
+  background-color: var(--background);
+  z-index: 2;
+  width: 70%;
+  border-bottom: 0.5px solid --border-color;
+  position: fixed;
+  font-family: "Inter", sans-serif;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.1em;
 }
 
 .iconHome {
-    width: 100%;
-    z-index: 3;
+  width: 100%;
+  z-index: 3;
 }
 
-.iconHome a{
-    font-weight: bold;
-    text-decoration: none;
-    color: var(--font-color);
-    font-family: 'Space Mono', monospace;
-    
+.iconHome a {
+  font-weight: bold;
+  text-decoration: none;
+  color: rgb(24, 65, 112);
+  font-family: "Inter", sans-serif;
 }
 
 .icon {
-    margin-right: 5%;
+  margin-left: 5%;
 }
 
 .icon a {
-    text-decoration: none;
-    color: var(--font-color);
+  text-decoration: none;
+  color: rgb(24, 65, 112);
 }
 
-
 .iconCenter {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    justify-content:center;
-    z-index: 3;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: end;
+  z-index: 3;
 }
 
 .socials {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    justify-content: flex-end;
-    margin-right: 2%;
-    z-index: 3;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: flex-end;
+  margin-right: 2%;
+  z-index: 3;
 }
 
 .social {
-    margin-right: 5%;
+  margin-right: 5%;
 }
 
-
 .social a {
-    text-decoration: none;
-    color: var(--font-color);
+  text-decoration: none;
+  color: var(--font-color);
 }
 
 .icon-linkedin {
-    height: 30px;
-    width: auto;
+  height: 30px;
+  width: auto;
 }
 
-.icon-resume{
-    height: 35px;
-    width: auto;
+.icon-resume {
+  height: 35px;
+  width: auto;
 }
 
 .lightDark {
-    border: .5px solid black;
-    background-color: var(--darkLight);
-    height: 2vh;
-    width: 2vw;
-    margin-right: .5%;
-    border-radius: 5px;
+  border: 0.5px solid rgb(39, 38, 38);
+  background-color: var(--darkLight);
+  height: 1.5vh;
+  width: 1.5vw;
+  margin-right: 0.5%;
+  border-radius: 50%;
 }
 
 /* #projectAnchor {
