--- a/src/Styles/homeModule.css
+++ b/src/Styles/homeModule.css
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   font-family: "Inter", sans-serif;
-  margin-top: 5%;
+  margin-top: 10%;
   width: 200%;
   align-items: center;
   font-family: "Inter", sans-serif;
@@ -18,7 +18,8 @@
   color: var(--font-color);
   font-size: 1.5rem;
   width: 50%;
-  padding: 5%;
+  animation: backInDown;
+  animation-duration: 2s;
   /* border-radius: 3%;
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
     rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
@@ -28,7 +29,7 @@
 }
 
 .intro {
-  color: rgb(24, 65, 112);
+  color: var(--bioColor);
 }
 
 .introContainer p {
@@ -85,4 +86,10 @@
 
 .icon-github {
   width: 40px;
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+  color: #064420;
 }
