--- a/src/Styles/navBar.css
+++ b/src/Styles/navBar.css
@@ -12,7 +12,7 @@
   padding: 1%;
   justify-content: center;
   font-size: 1.1em;
-  color: rgb(24, 65, 112);
+  color: var(--bioColor);
 }
 
 .navBarContainer {
@@ -37,7 +37,7 @@
 .iconHome a {
   font-weight: bold;
   text-decoration: none;
-  color: rgb(24, 65, 112);
+  color: var(--bioColor);
   font-family: "Inter", sans-serif;
 }
 
@@ -47,7 +47,7 @@
 
 .icon a {
   text-decoration: none;
-  color: rgb(24, 65, 112);
+  color: var(--bioColor);
 }
 
 .iconCenter {
@@ -87,12 +87,13 @@
 }
 
 .lightDark {
-  border: 0.5px solid rgb(39, 38, 38);
-  background-color: var(--darkLight);
-  height: 1.5vh;
-  width: 1.5vw;
+  /* background-color: var(--darkLight); */
+  height: 2vh;
+  width: 2vw;
   margin-right: 0.5%;
   border-radius: 50%;
+  cursor: pointer;
+  padding: 2px;
 }
 
 /* #projectAnchor {
