--- a/src/index.css
+++ b/src/index.css
@@ -25,21 +25,24 @@ code {
 @import "./Styles/projectModule.css";
 @import "./Styles/skillsModule.css";
 @import "./Styles/contactModule.scss";
+@import "./Styles/aboutMe.css";
 
 :root {
   --background: rgb(32, 32, 32);
-  --font-color: rgb(240, 240, 240);
+  --font-color: rgb(238, 231, 231);
   --border-color: rgb(15, 15, 15);
   --border-color2: black;
   --darkLight: rgb(250, 245, 245);
   --cardColor: rgb(28, 28, 28);
+  --bioColor: #a5c9ca;
 }
 
 .lightmode {
-  --background: rgb(255, 255, 255);
+  --background: #fffdf9;
   --font-color: rgb(17, 17, 17);
   --border-color: rgb(255, 247, 247);
   --border-color2: white;
   --darkLight: rgb(32, 32, 32);
   --cardColor: rgb(255, 255, 255);
+  --bioColor: rgb(24, 65, 112);
 }
