--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ code {
   --background: #fffdf9;
   --font-color: rgb(17, 17, 17);
   --border-color: rgb(255, 247, 247);
-  --border-color2: white;
+  --border-color2: rgb(226, 221, 221);
   --darkLight: rgb(32, 32, 32);
   --cardColor: rgb(255, 255, 255);
   --bioColor: rgb(24, 65, 112);
