--- a/src/Styles/navBar.css
+++ b/src/Styles/navBar.css
@@ -26,7 +26,7 @@
   font-family: "Inter", sans-serif;
   align-items: center;
   justify-content: center;
-  font-size: 1.1em;
+  font-size: 14px;
 }
 
 .iconHome {
@@ -107,3 +107,103 @@
 #contactAnchor {
     scroll-margin-top: 20px;
 } */
+
+@media only screen and (max-width: 500px) {
+  .navBar {
+    display: flex;
+    flex-direction: row;
+    background-color: var(--background);
+    z-index: 2;
+    width: 100%;
+    height: 5vh;
+    border-bottom: 0.5px solid --border-color;
+    position: fixed;
+    font-family: "Inter", sans-serif;
+    align-items: center;
+    padding: 1%;
+    justify-content: center;
+    font-size: 1.1em;
+    color: var(--bioColor);
+  }
+
+  .navBarContainer {
+    display: flex;
+    flex-direction: row;
+    background-color: var(--background);
+    z-index: 2;
+    width: 90%;
+    border-bottom: 0.5px solid --border-color;
+    position: fixed;
+    font-family: "Inter", sans-serif;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+  }
+
+  .iconHome {
+    width: 100%;
+    z-index: 3;
+  }
+
+  .iconHome a {
+    font-weight: bold;
+    text-decoration: none;
+    color: var(--bioColor);
+    font-family: "Inter", sans-serif;
+  }
+
+  .icon {
+    margin-left: 5%;
+  }
+
+  .icon a {
+    text-decoration: none;
+    color: var(--bioColor);
+  }
+
+  .iconCenter {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: end;
+    z-index: 3;
+  }
+
+  .socials {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: flex-end;
+    margin-right: 2%;
+    z-index: 3;
+  }
+
+  .social {
+    margin-right: 5%;
+  }
+
+  .social a {
+    text-decoration: none;
+    color: var(--font-color);
+  }
+
+  .icon-linkedin {
+    height: 30px;
+    width: auto;
+  }
+
+  .icon-resume {
+    height: 35px;
+    width: auto;
+  }
+
+  .lightDark {
+    /* background-color: var(--darkLight); */
+    height: 1vh;
+    width: 2vw;
+    margin-right: 0.5%;
+    border-radius: 50%;
+    cursor: pointer;
+    padding: 2px;
+  }
+}
