--- a/src/Styles/projectModule.css
+++ b/src/Styles/projectModule.css
@@ -11,664 +11,321 @@ margin-right: 5%; */
   padding-top: 2%;
   padding-bottom: 2%;
   width: 100%;
+
   /* border: solid 0.2px cyan; */
 }
 
-.projectPage {
-  width: 30%;
-  height: 30vh;
-  border-left: 1px solid var(--border-color2);
-  border-right: 1px solid var(--border-color2);
-  border-bottom: 1px solid var(--border-color2);
+.projects {
+  margin-top: 5%;
+  width: 100%;
 
-  padding: 2%;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
-    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-  /* box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px,
-  rgba(9, 30, 66, 0.13) 0px 0px 1px 1px; */
-  border-bottom-left-radius: 2%;
-  border-bottom-right-radius: 2%;
+  /* display: grid;
+  grid-template-columns: 2.5fr 2.5fr;
+  column-gap: 3%;
+  row-gap: 3%; */
 }
 
-.projectInfo {
-  padding: 0 2% 0 2%;
-  /* box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px,
-  rgba(9, 30, 66, 0.13) 0px 0px 1px 1px; */
-  width: 30%;
-  height: auto;
+.projectContainer1 {
   display: flex;
-  flex-direction: column;
-  padding-bottom: 1%;
-  border-top-left-radius: 2%;
-  border-top-right-radius: 2%;
-  border-left: 1px solid var(--border-color2);
-  border-right: 1px solid var(--border-color2);
-  border-top: 1px solid var(--border-color2);
+  /* justify-content: space-around; */
 }
 
-.projectTitle {
-  padding-top: 11vh;
-  margin-bottom: 2%;
-  text-align: center;
-  letter-spacing: 3px;
-  font-family: "Inter", sans-serif;
+.projectContainer2 {
+  display: flex;
+  /* justify-content: space-around; */
 }
 
-.projectPage {
-  animation: zoomIn;
-  animation-duration: 2s;
+.projectContainer {
+  width: 100%;
+  opacity: 90%;
+  /* box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px; */
+  background-color: var(--background);
+  display: flex;
+  color: rgb(238, 236, 236);
+  justify-content: center;
+  padding-bottom: 2%;
 }
 
-.projectInfo {
-  animation: zoomIn;
-  animation-duration: 2s;
+.imageContainer img {
+  width: 80%;
+  height: auto;
 }
 
-.slide-container {
-  height: 100%;
-}
-
-.each-slide {
-  margin-left: 4%;
-}
-
-.each-slide > div {
+.slideShowContainer {
+  width: 100%;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-size: cover;
-  height: 400px;
+  position: relative;
+
+  color: white;
+
+  flex-direction: column;
 }
 
-.projectName {
-  font-size: 2.5rem;
-  margin-bottom: 5px;
+.test {
+  width: 60%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+
+  border-radius: 15px;
+  color: white;
+
+  flex-direction: column;
+  padding: 3% 1%;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
 }
 
-.projectDescription {
-  padding: 0 15% 0 15%;
+#color1 {
+  background-color: var(--cardColor1);
+}
+
+#color2 {
+  background-color: var(--cardColor2);
+}
+
+#color3 {
+  background-color: var(--cardColor3);
+}
+
+.imageContainer {
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+
+  color: white;
+  flex-direction: column;
+}
+
+.image {
+  border: 4px solid black;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.projectInformation {
+  width: 60%;
+  margin-top: 2%;
+}
+
+.swiper {
+  width: 80%;
+  height: fit-content;
+  border: 4px solid black;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.swiperImg {
+  position: relative;
+  width: 50%;
+}
+
+.swiper-slide img {
+  width: 100%;
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
+}
+
+.swiper:hover {
+  transform: scale(1.1);
+  transition: 0.5s ease-in-out;
+  z-index: 2;
+}
+
+.image:hover {
+  transform: scale(1.1);
+  transition: 0.5s ease-in-out;
+  z-index: 2;
+}
+
+.information {
+  width: 70%;
+}
+
+.text {
+  font-family: "Inter", sans-serif;
+  border-bottom-right-radius: 15px;
+  border-bottom-left-radius: 15px;
+  cursor: pointer;
+  font-size: 3rem;
+  color: var(--font-color);
+  font-weight: bold;
+  font-family: "Open Sans", sans-serif;
+
+  opacity: 1;
+  position: relative;
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 5%;
+}
+
+.description {
   font-size: 1.2rem;
+  margin-top: 2%;
+  line-height: 1.6;
+  font-weight: 300;
 }
 
-.projectMotivation {
-  padding: 0 15% 0 15%;
-  font-size: 1.2rem;
+.Github {
+  align-items: center;
+  appearance: none;
+  background-color: #fff;
+  border-radius: 24px;
+  border-style: none;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 3px 5px -1px,
+    rgba(0, 0, 0, 0.14) 0 6px 10px 0, rgba(0, 0, 0, 0.12) 0 1px 18px 0;
+  box-sizing: border-box;
+  color: #3c4043;
+  cursor: pointer;
+  display: inline-flex;
+  fill: currentcolor;
+  font-family: "Google Sans", Roboto, Arial, sans-serif;
+  font-size: 1rem;
+  font-weight: 500;
+  height: 3rem;
+  justify-content: center;
+  letter-spacing: 0.25px;
+  line-height: normal;
+  max-width: 100%;
+  overflow: visible;
+  padding: 2% 100%;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 15ms linear 30ms, transform 270ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: auto;
+  will-change: transform, opacity;
+  z-index: 0;
 }
 
-.projectSkills {
-  font-size: 1.2rem;
+.Github:hover {
+  background: #f6f9fe;
+  color: #174ea6;
 }
 
-.projectSourceCode > a {
-  color: rgb(24, 65, 112);
-  text-decoration: none;
-  font-size: 1.2rem;
+.Github:active {
+  box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%),
+    0 8px 12px 6px rgb(60 64 67 / 15%);
+  outline: none;
 }
 
-.projectImg {
-  width: 90%;
-  margin-top: -5%;
+.Github:focus {
+  outline: none;
+  border: 2px solid #4285f4;
+}
+
+.Github:not(:disabled) {
+  box-shadow: rgba(60, 64, 67, 0.3) 0 1px 3px 0,
+    rgba(60, 64, 67, 0.15) 0 4px 8px 3px;
+}
+
+.Github:not(:disabled):hover {
+  box-shadow: rgba(60, 64, 67, 0.3) 0 2px 3px 0,
+    rgba(60, 64, 67, 0.15) 0 6px 10px 4px;
+}
+
+.Github:not(:disabled):focus {
+  box-shadow: rgba(60, 64, 67, 0.3) 0 1px 3px 0,
+    rgba(60, 64, 67, 0.15) 0 4px 8px 3px;
+}
+
+.Github:not(:disabled):active {
+  box-shadow: rgba(60, 64, 67, 0.3) 0 4px 4px 0,
+    rgba(60, 64, 67, 0.15) 0 8px 12px 6px;
+}
+
+.Github:disabled {
+  box-shadow: rgba(60, 64, 67, 0.3) 0 1px 3px 0,
+    rgba(60, 64, 67, 0.15) 0 4px 8px 3px;
+}
+
+.text p {
+  font-size: 1rem;
+  width: 60%;
+}
+
+.swiper .swiper-button-prev,
+.swiper .swiper-button-next {
+  color: black;
+}
+
+.projectPage {
+  width: 100%;
+  height: auto;
+  padding-left: auto;
+  padding-right: auto;
+  margin-left: -5%;
 }
 
 @media only screen and (max-width: 2500px) {
-  .project {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--background);
-    font-family: "Inter", sans-serif;
-    color: var(--font-color);
-    /* margin-left: 5%;
-margin-right: 5%; */
-    padding-top: 2%;
-    padding-bottom: 2%;
-    width: 100%;
-    /* border: solid 0.2px cyan; */
-  }
-
-  .projectPage {
-    width: 35%;
-    height: 30vh;
-    border-left: 1px solid var(--border-color2);
-    border-right: 1px solid var(--border-color2);
-    border-bottom: 1px solid var(--border-color2);
-
-    padding: 2%;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
-      rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-    /* box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px,
-  rgba(9, 30, 66, 0.13) 0px 0px 1px 1px; */
-    border-bottom-left-radius: 2%;
-    border-bottom-right-radius: 2%;
-  }
-
-  .projectInfo {
-    padding: 0 2% 0 2%;
-    /* box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px,
-  rgba(9, 30, 66, 0.13) 0px 0px 1px 1px; */
-    width: 35%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 1%;
-    border-top-left-radius: 2%;
-    border-top-right-radius: 2%;
-    border-left: 1px solid var(--border-color2);
-    border-right: 1px solid var(--border-color2);
-    border-top: 1px solid var(--border-color2);
-  }
-
-  .projectTitle {
-    padding-top: 11vh;
-    margin-bottom: 2%;
-    text-align: center;
-    letter-spacing: 3px;
-    font-family: "Inter", sans-serif;
-  }
-
-  .projectPage {
-    animation: zoomIn;
-    animation-duration: 2s;
-  }
-
-  .projectInfo {
-    animation: zoomIn;
-    animation-duration: 2s;
-  }
-
-  .slide-container {
-    height: 100%;
-  }
-
-  .each-slide {
-    margin-left: 4%;
-  }
-
-  .each-slide > div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-size: cover;
-    height: 400px;
-  }
-
-  .projectName {
-    font-size: 2.5rem;
-    margin-bottom: 5px;
-  }
-
-  .projectDescription {
-    padding: 0 15% 0 15%;
-    font-size: 1.2rem;
-  }
-
-  .projectMotivation {
-    padding: 0 15% 0 15%;
-    font-size: 1.2rem;
-  }
-
-  .projectSkills {
-    font-size: 1.2rem;
-  }
-
-  .projectSourceCode > a {
-    color: rgb(24, 65, 112);
-    text-decoration: none;
-    font-size: 1.2rem;
-  }
-
-  .projectImg {
-    width: 90%;
-    margin-left: 5%;
-  }
 }
 
 @media only screen and (max-width: 2000px) {
-  .project {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--background);
-    font-family: "Inter", sans-serif;
-    color: var(--font-color);
-    /* margin-left: 5%;
-margin-right: 5%; */
-    padding-top: 2%;
-    padding-bottom: 2%;
-    width: 100%;
-    /* border: solid 0.2px cyan; */
-  }
-
-  .projectPage {
-    width: 50%;
-    height: 30vh;
-    border-left: 1px solid var(--border-color2);
-    border-right: 1px solid var(--border-color2);
-    border-bottom: 1px solid var(--border-color2);
-
-    padding: 2%;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
-      rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-    /* box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px,
-  rgba(9, 30, 66, 0.13) 0px 0px 1px 1px; */
-    border-bottom-left-radius: 2%;
-    border-bottom-right-radius: 2%;
-  }
-
-  .projectInfo {
-    padding: 0 2% 0 2%;
-    /* box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px,
-  rgba(9, 30, 66, 0.13) 0px 0px 1px 1px; */
-    width: 50%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 1%;
-    border-top-left-radius: 2%;
-    border-top-right-radius: 2%;
-    border-left: 1px solid var(--border-color2);
-    border-right: 1px solid var(--border-color2);
-    border-top: 1px solid var(--border-color2);
-  }
-
-  .projectTitle {
-    padding-top: 11vh;
-    margin-bottom: 2%;
-    text-align: center;
-    letter-spacing: 3px;
-    font-family: "Inter", sans-serif;
-  }
-
-  .projectPage {
-    animation: zoomIn;
-    animation-duration: 2s;
-  }
-
-  .projectInfo {
-    animation: zoomIn;
-    animation-duration: 2s;
-  }
-
-  .slide-container {
-    height: 100%;
-  }
-
-  .each-slide {
-    margin-left: 4%;
-  }
-
-  .each-slide > div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-size: cover;
-    height: 400px;
-  }
-
-  .projectName {
-    font-size: 2.5rem;
-    margin-bottom: 5px;
-  }
-
-  .projectDescription {
-    padding: 0 15% 0 15%;
-    font-size: 1.2rem;
-  }
-
-  .projectMotivation {
-    padding: 0 15% 0 15%;
-    font-size: 1.2rem;
-  }
-
-  .projectSkills {
-    font-size: 1.2rem;
-  }
-
-  .projectSourceCode > a {
-    color: rgb(24, 65, 112);
-    text-decoration: none;
-    font-size: 1.2rem;
-  }
-
-  .projectImg {
-    width: 80%;
-    margin-left: 5%;
-    margin-top: -2%;
-  }
 }
 
 @media only screen and (max-width: 1450px) {
-  .project {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--background);
-    font-family: "Inter", sans-serif;
-    color: var(--font-color);
-    /* margin-left: 5%;
-  margin-right: 5%; */
-    padding-top: 2%;
-    padding-bottom: 2%;
-    width: 100%;
-    /* border: solid 0.2px cyan; */
-  }
-
-  .projectPage {
-    width: 60%;
-    height: 30vh;
-    border-left: 1px solid var(--border-color2);
-    border-right: 1px solid var(--border-color2);
-    border-bottom: 1px solid var(--border-color2);
-
-    padding: 2%;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
-      rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-    /* box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px,
-    rgba(9, 30, 66, 0.13) 0px 0px 1px 1px; */
-    border-bottom-left-radius: 2%;
-    border-bottom-right-radius: 2%;
-  }
-
-  .projectInfo {
-    padding: 0 2% 0 2%;
-    /* box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px,
-    rgba(9, 30, 66, 0.13) 0px 0px 1px 1px; */
-    width: 60%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 1%;
-    border-top-left-radius: 2%;
-    border-top-right-radius: 2%;
-    border-left: 1px solid var(--border-color2);
-    border-right: 1px solid var(--border-color2);
-    border-top: 1px solid var(--border-color2);
-  }
-
-  .projectTitle {
-    padding-top: 11vh;
-    margin-bottom: 2%;
-    text-align: center;
-    letter-spacing: 3px;
-    font-family: "Inter", sans-serif;
-  }
-
-  .projectPage {
-    animation: zoomIn;
-    animation-duration: 2s;
-  }
-
-  .projectInfo {
-    animation: zoomIn;
-    animation-duration: 2s;
-  }
-
-  .slide-container {
-    height: 100%;
-  }
-
-  .each-slide {
-    margin-left: 4%;
-  }
-
-  .each-slide > div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-size: cover;
-    height: 400px;
-  }
-
-  .projectName {
-    font-size: 2.5rem;
-    margin-bottom: 5px;
-  }
-
-  .projectDescription {
-    padding: 0 15% 0 15%;
-    font-size: 1.2rem;
-  }
-
-  .projectMotivation {
-    padding: 0 15% 0 15%;
-    font-size: 1.2rem;
-  }
-
-  .projectSkills {
-    font-size: 1.2rem;
-  }
-
-  .projectSourceCode > a {
-    color: rgb(24, 65, 112);
-    text-decoration: none;
-    font-size: 1.2rem;
-  }
-
-  .projectImg {
-    width: 90%;
-    margin-left: 5%;
-    margin-top: -1%;
-  }
 }
 
 @media only screen and (max-width: 1000px) {
-  .projectName {
-    font-size: 1.5rem;
-    margin-bottom: 5px;
-  }
-
-  .projectSkills {
-    font-size: 1rem;
-  }
-
-  .projectSourceCode > a {
-    color: rgb(24, 65, 112);
-    text-decoration: none;
-    font-size: 1rem;
-  }
 }
 
 @media only screen and (max-width: 1000px) {
-  .projectPage {
-    height: 20vh;
-  }
 }
 
 @media only screen and (max-width: 500px) {
-  .project {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--background);
-    font-family: "Inter", sans-serif;
-    color: var(--font-color);
-    /* margin-left: 5%;
-    margin-right: 5%; */
-    padding-top: 2%;
-    padding-bottom: 2%;
-    width: 100%;
-    /* border: solid 0.2px cyan; */
+  .description {
+    font-size: 0.7rem;
   }
 
-  .projectPage {
-    width: 80%;
-    height: 30vh;
-    border-left: 1px solid var(--border-color2);
-    border-right: 1px solid var(--border-color2);
-    border-bottom: 1px solid var(--border-color2);
-    padding: 2%;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
-      rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-    border-bottom-left-radius: 2%;
-    border-bottom-right-radius: 2%;
+  .Github {
+    width: 50%;
+    font-size: 0.7rem;
   }
 
-  .projectInfo {
-    padding: 0 2% 0 2%;
-    width: 80%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 1%;
-    border-top-left-radius: 2%;
-    border-top-right-radius: 2%;
-    border-left: 1px solid var(--border-color2);
-    border-right: 1px solid var(--border-color2);
-    border-top: 1px solid var(--border-color2);
-  }
-
-  .projectPage {
-    animation: zoomIn;
-    animation-duration: 2s;
-  }
-
-  .projectInfo {
-    animation: zoomIn;
-    animation-duration: 2s;
-  }
-
-  .slide-container {
-    height: 100%;
-  }
-
-  .each-slide {
-    margin-left: 4%;
-  }
-
-  .each-slide > div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-size: cover;
-    height: 400px;
-  }
-
-  .projectName {
-    font-size: 1.5rem;
-    margin-bottom: 5px;
-  }
-
-  .projectSkills {
-    font-size: 1rem;
-  }
-
-  .projectSourceCode > a {
-    color: rgb(24, 65, 112);
-    text-decoration: none;
-    font-size: 1rem;
-  }
-
-  .projectImg {
+  .projectInformation {
     width: 90%;
-    margin-left: 5%;
   }
 
-  .react-slideshow-container {
-    margin-top: 10%;
+  .information {
+    width: 90%;
   }
-  .projectImg {
-    margin-top: 10%;
+
+  .text {
+    font-size: 1rem;
+    justify-content: space-between;
+    align-items: center;
+    width: 95%;
+  }
+
+  .test {
+    width: 90%;
+  }
+
+  .description {
+    width: 100%;
   }
 }
 
 @media only screen and (max-width: 400px) {
-  .project {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--background);
-    font-family: "Inter", sans-serif;
-    color: var(--font-color);
-    /* margin-left: 5%;
-    margin-right: 5%; */
-    padding-top: 2%;
-    padding-bottom: 2%;
-    width: 100%;
-    /* border: solid 0.2px cyan; */
-  }
-
-  .projectPage {
-    width: 80%;
-    height: 35vh;
-    border-left: 1px solid var(--border-color2);
-    border-right: 1px solid var(--border-color2);
-    border-bottom: 1px solid var(--border-color2);
-    padding: 2%;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
-      rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-    border-bottom-left-radius: 2%;
-    border-bottom-right-radius: 2%;
-  }
-
-  .projectInfo {
-    padding: 0 2% 0 2%;
-    width: 80%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 1%;
-    border-top-left-radius: 2%;
-    border-top-right-radius: 2%;
-    border-left: 1px solid var(--border-color2);
-    border-right: 1px solid var(--border-color2);
-    border-top: 1px solid var(--border-color2);
-  }
-
-  .projectPage {
-    animation: zoomIn;
-    animation-duration: 2s;
-  }
-
-  .projectInfo {
-    animation: zoomIn;
-    animation-duration: 2s;
-  }
-
-  .slide-container {
-    height: 100%;
-  }
-
-  .each-slide {
-    margin-left: 4%;
-  }
-
-  .each-slide > div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-size: cover;
-    height: 400px;
-  }
-
-  .projectName {
-    font-size: 1.5rem;
-    margin-bottom: 5px;
-  }
-
-  .projectSkills {
-    font-size: 1rem;
-  }
-
-  .projectSourceCode > a {
-    color: rgb(24, 65, 112);
-    text-decoration: none;
-    font-size: 1rem;
-  }
-
-  .projectImg {
-    width: 90%;
-    margin-left: 5%;
-  }
-
-  .react-slideshow-container {
-    margin-top: 10%;
-  }
-  .projectImg {
-    margin-top: 10%;
-  }
 }
