--- a/src/Styles/projectModule.css
+++ b/src/Styles/projectModule.css
@@ -38,13 +38,13 @@ margin-right: 5%; */
 .projectContainer {
   width: 100%;
   opacity: 90%;
-  /* box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
-    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px; */
-  background-color: var(--background);
+
   display: flex;
   color: rgb(238, 236, 236);
   justify-content: center;
   padding-bottom: 2%;
+  animation: backInUp;
+  animation-duration: 2s;
 }
 
 .imageContainer img {
@@ -107,23 +107,18 @@ margin-right: 5%; */
 
 .image {
   border: 4px solid black;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .projectInformation {
   width: 60%;
   margin-top: 2%;
+  z-index: 3;
 }
 
 .swiper {
   width: 80%;
   height: fit-content;
   border: 4px solid black;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .swiperImg {
@@ -161,7 +156,7 @@ margin-right: 5%; */
   font-family: "Inter", sans-serif;
   border-bottom-right-radius: 15px;
   border-bottom-left-radius: 15px;
-  cursor: pointer;
+
   font-size: 3rem;
   color: var(--font-color);
   font-weight: bold;
@@ -304,11 +299,12 @@ margin-right: 5%; */
   }
 
   .projectInformation {
-    width: 90%;
+    width: 80%;
+    margin-bottom: 5%;
   }
 
   .information {
-    width: 90%;
+    width: 80%;
   }
 
   .text {
@@ -316,10 +312,14 @@ margin-right: 5%; */
     justify-content: space-between;
     align-items: center;
     width: 95%;
+    margin-top: 2%;
   }
 
   .test {
-    width: 90%;
+    width: 100%;
+    border-radius: 0;
+    padding-top: 5%;
+    padding-bottom: 5%;
   }
 
   .description {
